# DMMF-hexagonal-auth-template

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yml  deny.toml
.gemini/skills/postgresql-design-guidelines/: SKILL.md
.github/workflows/: ci.yml
.sqlx/: query-24d96ee135e940419906965b5f0b41a0324d7c200498c3cacff4087af23a7622.json  query-295cabb7e7f98128a3d3b85ab4b666510ef1d22982782d12d5b4f089489880dc.json
apps/api/: Cargo.toml
apps/api/src/: error.rs  lib.rs  main.rs  openapi.rs
apps/api/src/handlers/: auth.rs
apps/api/src/handlers/auth/login/: mod.rs  request.rs  response.rs
apps/api/src/handlers/auth/signup/: mod.rs  request.rs
apps/api/src/handlers/users/me/: mod.rs  response.rs
apps/api/src/middleware/: auth.rs
apps/api/src/schemas/: auth.rs
apps/api/src/tests/: auth_e2e.rs  mod.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/server/tests/: auth_e2e.rs
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/advanced_obs_security_20260222/: design_pii_masking.md  plan.md
conductor/archive/architectural_modernization_20260222/: index.md
conductor/archive/auth_user_mgmt_20260219/: design_cqrs.md  design_user_repository_error.md  metadata.json  reorganization_decision.md
conductor/archive/create_readme_20260222/: metadata.json  plan.md  spec.md
conductor/archive/domain_test_refine_20260222/: index.md  plan.md  spec.md
conductor/code_styleguides/: rust.md
conductor/tracks/advanced_obs_security_20260222/: design_pii_masking.md  index.md  metadata.json  plan.md  spec.md
conductor/tracks/architectural_modernization_20260222/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/auth_user_mgmt_20260219/: design_api_handlers.md  design_api_schemas.md  design_boilerplate_reduction.md  design_db_schema.md  design_error_conversion.md  design_integration_tests.md  design_user_encapsulation.md  design_user_repository_impl.md  index.md  plan.md  spec.md
conductor/tracks/ci_cache_optimization_20260223/: design.md  design_phase2.md  index.md  metadata.json  plan.md  spec.md
conductor/tracks/create_readme_20260222/: index.md  plan.md
conductor/tracks/domain_test_refine_20260222/: metadata.json  plan.md
conductor/tracks/reliable_infra_pattern_20260222/: index.md  metadata.json  plan.md  spec.md
libs/domain/: Cargo.toml
libs/domain/src/: entity.rs  error.rs  id.rs  lib.rs  sensitive_data.rs  test_utils.rs
libs/domain/src/models/auth/: error.rs  mod.rs
libs/domain/src/models/user/: email.rs  error.rs  mod.rs  password_hash.rs  service.rs  user_id.rs
libs/domain/src/repository/: tx.rs
libs/domain/src/usecase/: auth.rs  error.rs  mod.rs
libs/domain/src/usecase/auth/: command.rs  mod.rs  query.rs  test_utils.rs  tests.rs
libs/domain/src/usecase/auth/login/: dto.rs  mod.rs  query.rs
libs/domain/src/usecase/auth/signup/: command.rs  dto.rs  mod.rs
libs/domain_macros/: Cargo.toml
libs/domain_macros/src/: lib.rs
libs/domain_macros/tests/: derive_test.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: clock.rs  id.rs  lib.rs  telemetry.rs
libs/infrastructure/src/auth/: jwt.rs  mod.rs  password.rs
libs/infrastructure/src/repository/: mod.rs  tests.rs  tx.rs  user.rs  user_adapter.rs
libs/sensitive_data/: Cargo.toml
libs/sensitive_data/src/: lib.rs
libs/usecase/: Cargo.toml
libs/usecase/src/: error.rs  lib.rs
libs/usecase/src/auth/: mod.rs  service.rs  test_utils.rs
libs/usecase/src/auth/login/: dto.rs  mod.rs  query.rs
libs/usecase/src/auth/signup/: dto.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs
migrations/: 20260221071153_create_users.sql
scripts/: check_layers.sh
