[workspace]
members = [
    "libs/domain",
    "libs/usecase",
    "libs/infrastructure",
    "libs/domain_macros",
    "libs/sensitive_data",
    "apps/api",
    "apps/server",
    "migration",
]
resolver = "2"

[workspace.dependencies]
# Internal Libs
domain = { path = "libs/domain" }
usecase = { path = "libs/usecase" }
infrastructure = { path = "libs/infrastructure" }
domain_macros = { path = "libs/domain_macros" }
sensitive_data = { path = "libs/sensitive_data" }
api = { path = "apps/api" }
server = { path = "apps/server" }

# Async
tokio = { version = "1.49", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal",
] }
async-trait = "0.1"
futures-util = "0.3"

# Error Handling
thiserror = "2"
anyhow = "1"

# Web
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5.4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower = { version = "0.5.3", features = ["util"] }
http = "1.4.0"
mime = "0.3.17"

# DB
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }

# Security
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = "0.31"

# Utility
derive_more = { version = "2", features = [
    "display",
    "from",
    "as_ref",
    "into",
    "try_into",
    "error",
] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.3"
dotenvy = "0.15.7"
config = "0.15"
mockall = "0.14"
rstest = "0.26"
tower-http = { version = "0.6", features = ["trace", "cors"] }
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
darling = "0.23.0"
