[package]
name = "api"
version = "0.1.0"
edition = "2024"

[features]
default = ["openapi"]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dependencies]
# 内部クレートの参照をワークスペース経由に整理
domain = { workspace = true }
infrastructure = { workspace = true }
sensitive_data = { workspace = true }

# その他の外部ライブラリは既存の構成を維持
tokio = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http = { workspace = true }
mime = { workspace = true }
rstest = { workspace = true }
