[package]
name = "api"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["openapi"]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dependencies]
# 内部クレート: domain や infrastructure には依存しない
usecase = { workspace = true }
sensitive_data = { workspace = true }

# Web フレームワークと非同期
axum = { workspace = true }
tower-http = { workspace = true }

# シリアライズとバリデーション
serde = { workspace = true }
serde_json = { workspace = true }

# API ドキュメント
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

# ユーティリティ
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http = { workspace = true }
mime = { workspace = true }
rstest = { workspace = true }
# テスト時のみ domain や infrastructure を使う可能性がある場合は server 経由にするか
# モックを使用する
