[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "myapp-server"
path = "src/main.rs"

[dependencies]
api = { workspace = true }
usecase = { workspace = true }
infrastructure = { workspace = true }
domain = { workspace = true }
sensitive_data = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http = { workspace = true }
mime = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
