[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[features]
default = ["test-utils"]
test-utils = []

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
