[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
sensitive_data = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }
