[package]
name = "usecase"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
domain = { workspace = true }
sensitive_data = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }